welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not enough arguments for method serpent: (diag: Int)Unit.
Unspecified value parameter diag.
      serpent()      
             ^